# timeline-app

./: CMakeLists.txt  EditableLabelWidget.cpp  EditableLabelWidget.hpp  TimelineLayer.cpp  TimelineLayer.hpp  TimelineLayerFrame.cpp  TimelineLayerFrame.hpp  editablelabelwidget.ui  main.cpp  resources.qrc  timeline.cpp  timeline.h  timelinelayer.ui  timelinelayerframe.ui  treeDelegate.cpp  treeDelegate.hpp  window.cpp  window.h
